--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,5 +1,5 @@
 {
-  "orgName": "Demo Company",
+  "orgName": "Demo Company BINH BINH BINH",
   "edition": "Developer",
   "features": [],
   "settings": {
